--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,4 +2,11 @@
 set-option -sg escape-time 0
 
 set -g default-terminal "screen-256color"
+set -g default-shell /bin/zsh
+
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+run '~/.tmux/plugins/tpm/tpm'
 
