--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -9,6 +9,9 @@ import = [
   # "~/.config/alacritty/themes/catppuccin-mocha.toml"
 ]
 
+[shell]
+program = "/bin/zsh"
+args = ["-l"]
 
 [env]
 TERM = "xterm-256color"
