--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -3,10 +3,27 @@ set-option -sg escape-time 0
 
 set -g default-terminal "screen-256color"
 set -g default-shell /bin/zsh
+set -g mouse on
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux#v1.0.2' 
+
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_window_default_text " #W"
+set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M"
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+set -g @catppuccin_status_connect_separator "yes"
 
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_host}"
+set -ag status-right "#{E:@catppuccin_status_date_time}"
 
