--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,9 +1,15 @@
 # fix delay time between tmux & vim
 set-option -sg escape-time 0
 
-set -g default-terminal "screen-256color"
 set -g default-shell /bin/zsh
 set -g mouse on
+
+
+# colors, underscores, italics support - TODO: check if this is ok
+set -g default-terminal "$TERM"
+set -ag terminal-overrides ",$TERM:Tc"
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # colored underscores
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -26,4 +32,6 @@ set -g status-left ""
 set -g status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_host}"
 set -ag status-right "#{E:@catppuccin_status_date_time}"
+
+
 
